tests/vendor/valid/trivial/lt_false.c
//expect 0
//tags: trivial, binary, logical
int main() {
    return 2 < 1;
}