tests/vendor/invalid/syntax/misspelled_keyword.c
//tags: trivial
int main(void) {
    returns 0;
}